# fastapi-social-network

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
fastapi_social_network/: app.py  config.py  database.py  dependencies.py  responses.py
fastapi_social_network/routers/: main_router.py
src/fastapi_social_network/: app.py  config.py  crud.py  dependencies.py  models.py  schemas.py
src/fastapi_social_network/routers/: main_router.py
tests/: conftest.py  db.py  test_db.py  test_main.py
